ID-3253 : fix issues with default modal positioning add vertical align property on spinner

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -1013,6 +1013,7 @@ label {
 	position: absolute;
 	top: 9px;
 	left: 100%;
+	min-width: 0;
 }
 .required {
 	@mixin requiredCss {
